changed location index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <title>Bicas</title>
-  <link rel="stylesheet" type="text/css" href="src/css/style.css">
-  <script src="src/angular/angular.js"></script>
-  <script src="src/control/bicas.js"></script>
+  <link rel="stylesheet" type="text/css" href="frontend-js/src/css/style.css">
+  <script src="frontend-js/src/angular/angular.js"></script>
+  <script src="frontend-js/src/control/bicas.js"></script>
 </head>
 
 <body ng-controller="bicasCtrl">
