--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>Bicas</title>
   <link rel="icon" type="image/x-icon" href="frontend-js/lib/icons/favicon.ico">
   <link rel="stylesheet" type="text/css" href="frontend-js/src/css/style.css">
+  <link rel="stylesheet" type="text/css" href="frontend-js/src/css/button.css">
   <link rel="stylesheet" type="text/css" href="frontend-js/src/css/themes.css">
-  <script src="frontend-js/src/angular/angular.js"></script>
+  <script src="frontend-js/lib/angular/angular.js"></script>
   <script src="frontend-js/src/control/bicas.js"></script>
 
 </head>
