bueda changes, can include multiple players

--- a/frontend-js/src/html/table.html
+++ b/frontend-js/src/html/table.html
@@ -27,4 +27,4 @@
   </table>
   <p></p>
   <button class="btn addpointsbtn" ng-click="addPoints()">Add Points</button>
-  <span id="errorPointsCheckboxes"></span>
+  <span id="errorPointsCheckboxes" class="errorSpan"></span>
