big changes: info double view with app info and game info; more validation control in add points; can insert more than one player, separated by commas

--- a/frontend-js/src/html/table.html
+++ b/frontend-js/src/html/table.html
@@ -4,7 +4,7 @@
       <th>Name</th>
       <th>Score</th>
       <th>Round Category</th>
-      <th>Points Last Round</th>
+      <th>Previous Round Points</th>
       <th>Add Points</th>
       <th>Dealer</th>
     </tr>
